# micro_ros_raspberrypi_pico_sdk

./: CLAUDE.md  CMakeLists.txt  MFRC522_INTEGRATION.md  README.md  built_packages  pico_uart_transport.c
docs/: BUILD_AND_FLASH.md  DATAPI_GPIO_MAPPING.md  PROJECT_OVERVIEW.md  RFID_GUIDE.md
examples/: README.md  hcsr04_distance_example.c  led_blink_example.c  rfid_reader_example.c
micropython/: test_card_scan.py  test_gpio.py  test_rfid_simple.py  test_spi.py
micropython/lib/: mfrc522.py
